# sandcat-backend

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  _typos.toml  config-docker.yml  config.yml  deny.toml  diesel.toml  docker-compose.yml
.github/workflows/: rust_checks.yml
abi/: Cargo.toml  build.rs
abi/fixtures/: im.yml
abi/protos/: client_messages.proto  common.proto  messages.proto  server_messages.proto
abi/src/: config.rs  lib.rs  utils.rs
abi/src/errors/: conflict.rs  mod.rs
abi/src/model/: friend_request_status.rs  friends.rs  mod.rs  msg.rs  user.rs
abi/src/pb/: message.rs  msg.rs
abi/src/types/: friend.rs  group.rs  mod.rs  msg.rs  user.rs
api/: Cargo.toml
api/fixtures/templates/: email_temp.html
api/src/: lib.rs  main.rs  routes.rs
api/src/api_utils/: mod.rs
api/src/api_utils/custom_extract/: auth.rs  json_extractor.rs  path_extractor.rs
api/src/api_utils/ip_region/: mod.rs
api/src/api_utils/lb/: mod.rs  strategy.rs
api/src/handlers/: mod.rs
api/src/handlers/files/: file.rs
api/src/handlers/friends/: friend_handlers.rs  mod.rs
api/src/handlers/groups/: group_handlers.rs  mod.rs
api/src/handlers/messages/: mod.rs  msg_handlers.rs
api/src/handlers/users/: mod.rs  oauth2.rs  user_handlers.rs
cache/: Cargo.toml
cache/src/: lib.rs
cache/src/redis/: mod.rs
chat/: Cargo.toml
chat/src/: config.rs  errors.rs  lib.rs  main.rs
chat/src/domain/: mod.rs
chat/src/domain/model/: friend_request_status.rs  friends.rs  group.rs  group_members.rs  manager.rs  msg.rs  user.rs
chat/src/handlers/files/: file.rs  mod.rs
chat/src/handlers/friends/: friend_handlers.rs  mod.rs
chat/src/handlers/group_members/: group_members_handlers.rs  mod.rs
chat/src/handlers/groups/: group_handlers.rs  mod.rs
chat/src/handlers/users/: user_handlers.rs
chat/src/handlers/ws/: mod.rs  ws_service.rs
chat/src/infra/: errors.rs  mod.rs
chat/src/infra/db/: mod.rs  schema.rs
chat/src/infra/repositories/: friends.rs  groups.rs  messages.rs  user_repo.rs
chat/src/utils/: mod.rs
chat/src/utils/custom_extract/: auth.rs  json_extractor.rs  mod.rs  path_extractor.rs
chat/src/utils/redis/: mod.rs  redis_crud.rs
cmd/: Cargo.toml
cmd/src/: load_seq.rs  main.rs
consumer/: Cargo.toml
consumer/src/: lib.rs  main.rs
db/: Cargo.toml
db/src/: friend.rs  group.rs  lib.rs  main.rs  message.rs  rpc.rs  seq.rs  user.rs
db/src/database/: friend.rs  group.rs  message.rs  mod.rs  seq.rs  user.rs
db/src/database/mongodb/: message.rs  mod.rs  utils.rs
db/src/database/postgres/: friend.rs  group.rs  message.rs  mod.rs  seq.rs  user.rs
db/src/mongodb/: message.rs  mod.rs  utils.rs
db/src/postgres/: friend.rs  group.rs  message.rs  mod.rs  seq.rs  user.rs
db/src/relation_db/: group.rs  message.rs  mod.rs
db/src/relation_db/mongodb/: message.rs
db/src/relation_db/postgres/: group.rs  message.rs  mod.rs
db/src/rpc/: mod.rs  service.rs
migrations/: 20240322014338_users.up.sql  20240322014354_friends.down.sql  20240322014354_friends.up.sql  20240322014403_friendships.down.sql  20240322014403_friendships.up.sql  20240322014412_messages.down.sql  20240322014412_messages.up.sql  20240322014422_groups.up.sql  20240322014431_group_members.down.sql  20240322014431_group_members.up.sql  20240531055948_seq.down.sql  20240531055948_seq.up.sql  20240602023816_seq.down.sql  20240602023816_seq.up.sql
migrations/2023-12-15-032329_users/: down.sql  up.sql
migrations/2023-12-21-025306_friends/: up.sql
migrations/2023-12-25-043909_friendships/: up.sql
migrations/2023-12-25-142557_messages/: up.sql
migrations/2024-03-06-090849_groups/: up.sql
migrations/2024-03-07-104659_group_members/: down.sql  up.sql
msg_gateway/: Cargo.toml
msg_gateway/src/: client.rs  lib.rs  main.rs  manager.rs  rpc.rs  ws_server.rs
msg_gateway/tests/: rpc_test.rs
msg_server/: Cargo.toml
msg_server/src/: consumer.rs  lib.rs  main.rs  productor.rs
msg_server/src/pusher/: mod.rs  service.rs
oss/: Cargo.toml
oss/src/: client.rs  lib.rs
pusher/: Cargo.toml
pusher/src/: lib.rs  main.rs
rfcs/: core_flow.md  draft.md  greet.md  readme_cn.md  template.md
rfcs/images/: 时序图.awebp
rpc/: Cargo.toml
src/: config.rs  errors.rs  main.rs  routes.rs  schema.rs
src/domain/model/: friend_request_status.rs  friends.rs  group.rs  group_members.rs  manager.rs  mod.rs  msg.rs  user.rs
src/handlers/: mod.rs
src/handlers/files/: file.rs  mod.rs
src/handlers/friends/: friend_handlers.rs  mod.rs
src/handlers/group_members/: group_members_handlers.rs  mod.rs
src/handlers/groups/: group.rs  group_handlers.rs  mod.rs
src/handlers/messages/: mod.rs
src/handlers/users/: mod.rs  user_handlers.rs
src/handlers/ws/: ws_service.rs
src/infra/: errors.rs  mod.rs
src/infra/db/: schema.rs
src/infra/repositories/: friends.rs  friendship_repo.rs  group_members.rs  groups.rs  messages.rs  mod.rs  user_repo.rs
src/model/: manager.rs  mod.rs  msg.rs
src/service/ws/: mod.rs  ws_service.rs
src/utils/: mod.rs
src/utils/custom_extract/: auth.rs  json_extractor.rs  mod.rs  path_extractor.rs
src/utils/redis/: mod.rs  redis_crud.rs
utils/: Cargo.toml
utils/migrations/: 20240301073623_todo.up.sql
utils/src/: client_factory.rs  lib.rs
utils/src/custom_extract/: auth.rs  json_extractor.rs  mod.rs  path_extractor.rs
utils/src/mongodb_tester/: mod.rs
utils/src/service_discovery/: mod.rs  service_fetcher.rs  tonic_service_discovery.rs
utils/src/service_register_center/: mod.rs  tonic_service_discovery.rs  typos.rs
utils/src/service_register_center/consul/: mod.rs
utils/src/sqlx_tester/: mod.rs
ws/: Cargo.toml
ws/src/: client.rs  lib.rs  main.rs  manager.rs  rpc.rs  ws_server.rs
ws/tests/: rpc_test.rs
