[package]
name = "im-backend"
version = "0.1.0"
edition = "2021"
publish = false

[workspace.lint.rust]
unused = "allow"


[dependencies]
axum = { version = "0.7", features = ["ws"] }
#axum-macros = "0.3"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5.0", features = ["cors"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.4", features = ["postgres", "chrono", "serde_json"] }
deadpool-diesel = { version = "0.4.0", features = ["postgres"] }
nanoid = "0.4.0"
