[package]
name = "abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
axum = "0.7.4"
bincode = "1.3.3"
chrono = { version = "0.4.34", features = ["serde"] }
derive_builder = "0.20.0"
mongodb = "2.8.2"
prost = "0.12.3"
prost-types = "0.12.3"
redis = { version = "0.25.2", features = ["tokio-comp"] }
regex = "1.10.3"
reqwest = "0.12.2"
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"
thiserror = "1.0.57"
tonic = { version = "0.11.0", features = ["gzip"] }
tokio = "1.36.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
tonic-build = "0.11.0"
