[package]
name = "abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
aws-sdk-s3 = { version = "1.4.0", features = ["rt-tokio"] }
axum = "0.7.4"
bincode = "1.3.3"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
derive_builder = "0.20.0"
http = "0.2"
mongodb = "2.8.2"
prost = "0.12"
prost-types = "0.12.3"
redis = "0.25.2"
regex = "1.10.3"
reqwest = "0.12.2"
sqlx = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.32"
thiserror = "1.0.57"
tonic = { version = "0.11.0", features = ["gzip"] }
tower = "0.4"
tokio = "1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
http-body = "1.0.0"

[build-dependencies]
tonic-build = "0.11.0"
