[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

abi = { version = "0.1.0", path = "../abi" }
cache = { version = "0.1.0", path = "../cache" }
oss = { version = "0.1.0", path = "../oss" }
db = { version = "0.1.0", path = "../db" }
ws = { version = "0.1.0", path = "../ws" }
utils = { version = "0.1.0", path = "../utils" }

tonic = { version = "0.11.0", features = ["gzip"] }
axum = { version = "0.7", features = ["multipart"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
serde = "1.0.197"
jsonwebtoken = "9"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
nanoid = "0.4.0"
lettre = "0.11"
rand = "0.8.5"
chrono = "0.4.37"
base64 = "0.22.0"
argon2 = "0.5.3"
axum-streams = { version = "0.14", features = ["json", "csv", "protobuf", "text"] }
bincode = "1.3.3"
hyper = "1.2.0"
tera = { version = "1", default-features = false }
xdb = { git = "https://github.com/lionsoul2014/ip2region.git", branch = "master" }
