[package]
name = "api"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

abi = { version = "0.1.0", path = "../abi" }
cache = { version = "0.1.0", path = "../cache" }
db = { version = "0.1.0", path = "../db" }
oss = { version = "0.1.0", path = "../oss" }
utils = { version = "0.1.0", path = "../utils" }

argon2 = "0.5.3"
axum = { version = "0.7", features = ["multipart"] }
axum-streams = { version = "0.14", features = [
    "json",
    "csv",
    "protobuf",
    "text",
] }
base64 = "0.22.0"
bincode = "1.3.3"
chrono = "0.4.37"
futures = "0.3"
hyper = "1.2.0"
image = "0.25.1"
jsonwebtoken = "9"
lettre = "0.11"
nanoid = "0.4.0"
oauth2 = "4.4.2"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = "1"
serde_json = "1"
tera = { version = "1", default-features = false }
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.11.0", features = ["gzip"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
xdb = { git = "https://github.com/lionsoul2014/ip2region.git", branch = "master" }
synapse = { git = "https://github.com/Xu-Mj/synapse.git", branch = "main" }
