[package]
name = "cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# as a basic library we can't rely on the other crates besise abi,
# because abi is the foundation of the whole project
[dependencies]
abi = { version = "0.1.0", path = "../abi" }
async-trait = "0.1.79"
redis = { version = "0.25.2", features = ["tokio-comp"] }
tokio = { version = "1.36.0", features = ["full"] }
tonic = { version = "0.11.0", features = ["gzip"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
