[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
utils = { version = "0.1.0", path = "../utils" }
tonic = { version = "0.11.0", features = ["gzip"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.31", features = ["serde"] }
nanoid = "0.4.0"
rdkafka = { version = "0.36.2", features = ["dynamic-linking"] }
tonic-health = "0.11.0"
async-trait = "0.1.80"
