[package]
name = "cmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
chat = { version = "0.1.0", path = "../chat" }
consumer = { version = "0.1.0", path = "../consumer" }
db = { version = "0.1.0", path = "../db" }
pusher = { version = "0.1.0", path = "../pusher" }
tokio = { version = "1.36.0", features = ["full"] }
ws = { version = "0.1.0", path = "../ws" }
log = "0.4.20"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
