[package]
name = "cmd"
authors = ["Xu-mj"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
api = { version = "0.1.0", path = "../api" }
cache = { version = "0.1.0", path = "../cache" }
db = { version = "0.1.0", path = "../db" }
msg_gateway = { version = "0.1.0", path = "../msg_gateway" }
msg_server = { version = "0.1.0", path = "../msg_server" }
utils = { version = "0.1.0", path = "../utils" }

chrono = "0.4"
clap = { version = "4.5.4", features = ["cargo"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["time"] }
tracing-appender = "0.2.3"

[features]
default = ["dynamic"]
dynamic = ["msg_server/dynamic"]
static = ["msg_server/static"]
