[package]
name = "consumer"
version = "0.1.0"
edition = "2021"
# consume the kafka messages to postgres, mongodb, redis
# and push the message to pusher which is push message to each client
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
serde = "1.0.197"
tokio = { version = "1.36.0", features = ["full"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tonic = { version = "0.11.0", features = ["gzip"] }
serde_json = "1.0.114"
rdkafka = { version = "0.36.2", features = ["dynamic-linking"] }
cache = { version = "0.1.0", path = "../cache" }
utils = { version = "0.1.0", path = "../utils" }
