[package]
name = "consumer"
version = "0.1.0"
edition = "2021"
# consume the kafka messages to postgres, mongodb, redis
# and push the message to pusher which is push message to each client
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
cache = { version = "0.1.0", path = "../cache" }
utils = { version = "0.1.0", path = "../utils" }

rdkafka = { version = "0.36.2" }
serde = "1"
serde_json = "1"
tokio = { version = "1.36.0", features = ["full"] }
tonic = { version = "0.11.0", features = ["gzip"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
synapse = { git = "https://github.com/Xu-Mj/synapse.git", branch = "main" }

[features]
static = ["rdkafka/cmake-build"]
dynamic = ["rdkafka/dynamic-linking"]
