[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
tokio = { version = "1.36.0", features = ["full"] }
tonic = { version = "0.11.0", features = ["gzip"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.31", features = ["serde"] }
async-trait = "0.1.79"
mongodb = "2.8.2"
bson = { version = "2.9.0", features = ["chrono-0_4"] }
utils = { version = "0.1.0", path = "../utils" }
cache = { version = "0.1.0", path = "../cache" }
