[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
cache = { version = "0.1.0", path = "../cache" }
utils = { version = "0.1.0", path = "../utils" }

argon2 = "0.5.3"
async-trait = "0.1.79"
bson = { version = "2.9.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.31", features = ["serde"] }
futures = "0.3.30"
mongodb = "2.8.2"
nanoid = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
] }
tokio = { version = "1.36.0", features = ["full"] }
tonic = { version = "0.11.0", features = ["gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
synapse = { git = "https://github.com/Xu-Mj/synapse.git", branch = "main" }
