[package]
name = "msg_gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
cache = { version = "0.1.0", path = "../cache" }
utils = { version = "0.1.0", path = "../utils" }

anyhow = "1.0.81"
axum = { version = "0.7.4", features = ["ws"] }
bincode = "1.3.3"
dashmap = "5.5.3"
futures = "0.3.30"
jsonwebtoken = "9"
nanoid = "0.4.0"
serde = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tonic = { version = "0.11.0", features = ["gzip"] }

synapse = { git = "https://github.com/Xu-Mj/synapse.git", branch = "main" }
[dev-dependencies]
tungstenite = "0.21.0"
tokio-tungstenite = "0.21.0"
url = "2.5.0"
