[package]
name = "msg_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
cache = { version = "0.1.0", path = "../cache" }
db = { version = "0.1.0", path = "../db" }
utils = { version = "0.1.0", path = "../utils" }

async-trait = "0.1.80"
bincode = "1"
chrono = { version = "0.4.31", features = ["serde"] }
dashmap = "5.5.3"
futures = "0.3.30"
nanoid = "0.4.0"
rdkafka = { version = "0.36.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = { version = "0.11.0", features = ["gzip"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

synapse = { git = "https://github.com/Xu-Mj/synapse.git", branch = "main" }


[features]
static = ["rdkafka/cmake-build"]
dynamic = ["rdkafka/dynamic-linking"]
