[package]
name = "oss"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }

async-trait = "0.1.79"
aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.4.0", features = ["rt-tokio"] }
aws-smithy-runtime = { version = "1.0.1" }
aws-smithy-runtime-api = { version = "1.0.1", features = ["client"] }
aws-smithy-types = { version = "1.0.1", features = ["http-body-0-4-x"] }
bytes = "1.6.0"
http = "1.1.0"
http-body = "1.0.0"
md-5 = "0.10.1"
pin-project = "1.0.12"
rand = "0.8.5"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1.0"
tokio = { version = "1.20.1", features = ["full"] }
tokio-stream = "0.1.8"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
uuid = { version = "1.3.1", features = ["serde", "v4"] }
