[package]
name = "pusher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
tokio = { version = "1.36.0", features = ["full"] }
tonic = { version = "0.11.0", features = ["gzip"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
