[package]
name = "utils"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }

axum = "0.7.4"
argon2 = "0.5.3"
chrono = "0.4.35"
hostname = "0.4"
http = "0.2.12"
mongodb = "2.8.2"
reqwest = { version = "0.12.2", features = ["json"] }
serde = "1.0.197"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.36.0", features = ["macros", "rt", "rt-multi-thread"] }
tonic = "0.11.0"
tower = "0.4.13"
tracing = "0.1.40"
uuid = { version = "1.7.0", features = ["v4"] }
async-trait = "0.1.80"
synapse = { git = "https://github.com/Xu-Mj/synapse.git", branch = "main" }
